--- a/McLabel/Templates/ListBoxTemplates.xaml
+++ b/McLabel/Templates/ListBoxTemplates.xaml
@@ -1,5 +1,27 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <ControlTemplate x:Key="ScrollBackground" TargetType="RepeatButton">
+        <Border Background="Transparent" />
+    </ControlTemplate>
+
+    <Style x:Key="ScrollThumbStyle" TargetType="Thumb">
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="OverridesDefaultStyle" Value="true" />
+        <Setter Property="IsTabStop" Value="false" />
+        <Setter Property="Focusable" Value="false" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Thumb">
+                    <Rectangle
+                        Width="13"
+                        Fill="{DynamicResource LabelBackground}"
+                        RadiusX="5"
+                        RadiusY="5" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style x:Key="ListBoxStyle" TargetType="{x:Type ListBox}">
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -9,8 +31,42 @@
         <Setter Property="SelectionMode" Value="Single" />
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
+        <Style.Resources>
+            <Style TargetType="ScrollBar">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="ScrollBar">
+                            <Grid Width="15">
+                                <Border
+                                    Width="13"
+                                    HorizontalAlignment="Center"
+                                    Background="#33555555"
+                                    CornerRadius="5" />
+                                <Track
+                                    Name="PART_Track"
+                                    Width="{TemplateBinding Width}"
+                                    HorizontalAlignment="Center"
+                                    IsDirectionReversed="true"
+                                    Maximum="{TemplateBinding Maximum}"
+                                    Minimum="{TemplateBinding Minimum}"
+                                    Value="{TemplateBinding Value}">
+                                    <Track.DecreaseRepeatButton>
+                                        <RepeatButton Command="ScrollBar.LineUpCommand" Template="{StaticResource ScrollBackground}" />
+                                    </Track.DecreaseRepeatButton>
+                                    <Track.IncreaseRepeatButton>
+                                        <RepeatButton Command="ScrollBar.LineDownCommand" Template="{StaticResource ScrollBackground}" />
+                                    </Track.IncreaseRepeatButton>
+                                    <Track.Thumb>
+                                        <Thumb Style="{StaticResource ScrollThumbStyle}" />
+                                    </Track.Thumb>
+                                </Track>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+        </Style.Resources>
     </Style>
-
 
     <Style x:Key="ListBoxItemStyle" TargetType="{x:Type ListBoxItem}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
@@ -37,7 +93,7 @@
                                                   RelativeSource={RelativeSource AncestorType=UserControl,
                                                                                  AncestorLevel=1}}"
                                 CommandParameter="{Binding}"
-                                Content="Del"
+                                Style="{DynamicResource DeleteButtonStyle}"
                                 Visibility="Collapsed" />
                             <TextBlock
                                 x:Name="textBlock"
@@ -52,13 +108,13 @@
                         <Trigger Property="IsSelected" Value="True">
                             <Setter TargetName="border" Property="BorderThickness" Value="1" />
                             <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource ItemBorderBrush}" />
+                            <Setter TargetName="border" Property="Opacity" Value=".85" />
                             <Setter TargetName="textBlock" Property="FontWeight" Value="Bold" />
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter TargetName="deleteButton" Property="Visibility" Value="Visible" />
                             <Setter TargetName="border" Property="Opacity" Value=".85" />
                             <Setter TargetName="textBlock" Property="FontWeight" Value="Bold" />
-                            <Setter TargetName="textBlock" Property="FontSize" Value="13" />
                             <Setter TargetName="border" Property="BorderThickness" Value="1" />
                             <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource ItemBorderBrush}" />
                         </Trigger>
