--- a/McLabel/Templates/TextBlockTemplates.xaml
+++ b/McLabel/Templates/TextBlockTemplates.xaml
@@ -4,6 +4,7 @@
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="TextWrapping" Value="Wrap" />
+        <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="Foreground" Value="{DynamicResource NoItemSelectedTextBrush}" />
         <Setter Property="FontSize" Value="16" />
     </Style>
