--- a/McLabel/Views/StartScreenView.xaml
+++ b/McLabel/Views/StartScreenView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:fa5="http://schemas.fontawesome.com/icons/"
     xmlns:local="clr-namespace:McLabel.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:McLabel.ViewModels"
@@ -11,27 +12,87 @@
     d:DesignWidth="1024"
     FontSize="16"
     mc:Ignorable="d">
-    <Grid>
-        <StackPanel
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Orientation="Vertical">
-            <TextBlock
-                Margin="0,10"
-                HorizontalAlignment="Center"
+    <Border
+        Width="720"
+        Height="250"
+        Background="{DynamicResource SelectionBackground}"
+        CornerRadius="10">
+        <Grid Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*" />
+                <RowDefinition Height="auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="4*" />
+            </Grid.ColumnDefinitions>
+            <fa5:FontAwesome
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="10"
                 VerticalAlignment="Center"
-                FontSize="65"
-                FontWeight="Light"
-                Foreground="#666666"
-                Text="Hello" />
-            <Button Command="{Binding SelectFilesCommand}" Content="select files" />
-            <TextBlock
-                Margin="0,5"
-                HorizontalAlignment="Center"
-                FontWeight="Bold"
-                Foreground="#222222"
-                Text="or create" />
-            <Button Command="{Binding OpenMainEditorCommand}" Content="new file" />
-        </StackPanel>
-    </Grid>
+                FontSize="60"
+                Foreground="{DynamicResource DefaultTextBrush}"
+                Icon="Solid_Desktop"
+                Opacity=".5" />
+            <StackPanel
+                Grid.Row="0"
+                Grid.Column="1"
+                VerticalAlignment="Center"
+                Orientation="Vertical">
+                <TextBlock
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    FontFamily="Segoe UI"
+                    FontSize="30"
+                    FontWeight="DemiBold"
+                    Foreground="{DynamicResource DefaultTextBrush}"
+                    Text="Visual menu manager AccuDate 9700" />
+                <TextBlock
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    FontFamily="Segoe UI"
+                    FontSize="16"
+                    FontWeight="Light"
+                    Foreground="{DynamicResource DefaultTextBrush}"
+                    Text="add or remove items and categories, make other changes fast and simple"
+                    TextWrapping="Wrap" />
+            </StackPanel>
+            <Separator
+                Grid.Row="1"
+                Grid.ColumnSpan="2"
+                Margin="20,3"
+                Background="{DynamicResource DefaultTextBrush}" />
+            <Grid
+                Grid.Row="2"
+                Grid.ColumnSpan="2"
+                Margin="40,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Button
+                    Grid.Column="0"
+                    Command="{Binding SelectFilesCommand}"
+                    Content="select files"
+                    Style="{StaticResource StartScreenSelectButtonStyle}" />
+                <TextBlock
+                    Grid.Column="1"
+                    Margin="35,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="14"
+                    FontWeight="Bold"
+                    Foreground="{StaticResource DefaultTextBrush}"
+                    Text="OR" />
+                <Button
+                    Grid.Column="2"
+                    Command="{Binding OpenMainEditorCommand}"
+                    Content="create a new file"
+                    Style="{StaticResource StartScreenSelectButtonStyle}" />
+            </Grid>
+        </Grid>
+    </Border>
 </UserControl>
