--- a/McLabel/Views/Windows/ConfirmationWindow.xaml
+++ b/McLabel/Views/Windows/ConfirmationWindow.xaml
@@ -2,13 +2,13 @@
     x:Class="McLabel.Views.Windows.ConfirmationWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cmd="clr-namespace:McLabel.Commands"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:fa5="http://schemas.fontawesome.com/icons/"
     xmlns:local="clr-namespace:McLabel.Views.Windows"
-    xmlns:cmd="clr-namespace:McLabel.Commands"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Width="400"
-    Height="220"
+    Height="250"
     AllowsTransparency="True"
     Background="Transparent"
     DataContext="{Binding ConfirmationWindowViewModel,
@@ -31,7 +31,7 @@
                 ShadowDepth="0"
                 Color="Black" />
         </Border.Effect>
-        <Grid Margin="5">
+        <Grid Margin="5,5,5,8">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
@@ -62,6 +62,7 @@
             <TextBlock
                 Grid.Row="1"
                 Grid.Column="1"
+                Margin="0,0,15,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
                 FontSize="15"
@@ -69,15 +70,16 @@
                 Text="{Binding Message}"
                 TextWrapping="Wrap" />
             <CheckBox
-                Grid.Row="2"
+                Grid.Row="3"
                 Grid.ColumnSpan="2"
-                Margin="7,10"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
+                Margin="10,15,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
                 Content="Don't show this window again"
                 Foreground="{DynamicResource DefaultTextBrush}"
+                IsChecked="{Binding DontShowWindow}"
                 Style="{StaticResource CheckBoxStyle1}" />
-            <Grid Grid.Row="3" Grid.ColumnSpan="2">
+            <Grid Grid.Row="2" Grid.ColumnSpan="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
@@ -89,9 +91,9 @@
                     Margin="10,0"
                     HorizontalAlignment="Right"
                     Content="OK"
-                    Style="{StaticResource MainButtonStyle}" >
+                    Style="{StaticResource MainButtonStyle}">
                     <Button.Command>
-                        <cmd:DialogCommand DialogResult="True"/>
+                        <cmd:DialogCommand DialogResult="True" />
                     </Button.Command>
                 </Button>
                 <Button
@@ -101,9 +103,9 @@
                     Margin="10,0"
                     HorizontalAlignment="Left"
                     Content="Cancel"
-                    Style="{StaticResource MainButtonStyle}" >
+                    Style="{StaticResource MainButtonStyle}">
                     <Button.Command>
-                        <cmd:DialogCommand DialogResult="False"/>
+                        <cmd:DialogCommand DialogResult="False" />
                     </Button.Command>
                 </Button>
             </Grid>
